Fix card alignment

--- a/styles/place.css
+++ b/styles/place.css
@@ -5,18 +5,6 @@
     height: auto;
 }
 
-@media (min-width: 800px) {
-    .weather-icon {
-        display: none;
-    }
-    #weather-heading::after {
-        content: " ⛅";
-        font-size: 2rem;
-        vertical-align: middle;
-        margin-left: 0.5em;
-        line-height: 1;
-    }
-}
 :root {
     --content-max-width: 1080px;
 }
@@ -49,7 +37,35 @@
     background: transparent;
 }
 
+.card {
+    background-color: rgba(224, 221, 221, 0.6);
+    padding: 1rem;
+    margin: 1rem auto;
+    text-align: center;
+    /* width: min-content;
+    min-width: 250px; */
+    justify-items: center;
+}
+
+.card h2 {
+    padding: 0.5rem;
+    margin-top: 0;
+    margin-bottom: 1rem;
+    border-radius: 8px;
+    width: 100%;
+}
+
 @media (min-width: 800px) {
+    .weather-icon {
+        display: none;
+    }
+    #weather-heading::after {
+        content: " ⛅";
+        font-size: 2rem;
+        vertical-align: middle;
+        margin-left: 0.5em;
+        line-height: 1;
+    }
     .hero {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -81,21 +97,16 @@
         z-index: 2;
         background: rgba(255, 255, 255, 0.95);
         margin: 1rem;
+        align-self: flex-end;
     }
-}
 
-.card {
-    background-color: rgba(255, 255, 255, 0.6);
-    padding: 1rem;
-    margin: 1rem;
-}
+    .card {
+        background-color: rgba(255, 255, 255, 0.6);
+    }
 
-.card h3 {
-    background-color: rgb(193, 204, 178);
-    padding: 0.5rem;
-    margin-top: 0;
-    margin-bottom: 0.5rem;
-    border-radius: 8px;
+    .card h2 {
+        background-color: rgb(193, 204, 178);
+    }
 }
 
 .data-list div {
